--- a/templated-industrious/index.html
+++ b/templated-industrious/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Industrious by TEMPLATED</title>
+		<title>THERE IS NO TITLE</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -17,9 +17,14 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">Industrious</a>
+			<a href="#" class="icon fa-vcard-o">
+			<a href="#" class="icon fa-vcard-o">
+				<a class="logo" href="index.html">Industrious lacinia accumsan orci ac ante nunc ac </a>
 				<nav>
-					<a href="#menu">Menu</a>
+					<a href="#menu">Menu accumsan interdum gravida ac integer lobortis commodo ornare aliquet accumsan erat tempus amet</a>
+					<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+					<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+					<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
 				</nav>
 			</header>
 
@@ -27,19 +32,15 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="elements.html">Elements lacinia ante nunc ac </a></li>
 					<li><a href="generic.html">Generic</a></li>
 				</ul>
 			</nav>
 
 		<!-- Banner -->
 			<section id="banner">
-				<div class="inner">
-					<h1>Industrious</h1>
-					<p>A responsive business oriented template with a video background<br />
-					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
-				</div>
-				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
+				<video loop playsinline src="images/banner.mp4"></video>
+				<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
 			</section>
 
 		<!-- Highlights -->
@@ -47,7 +48,7 @@
 				<div class="inner">
 					<header class="special">
 						<h2>Sem turpis amet semper</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id interdum gravida enim aliquet. Accumsan interdum gravida ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
 					</header>
 					<div class="highlights">
 						<section>
@@ -56,11 +57,13 @@
 									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
 									<h3>Feugiat consequat</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer interdum gravida non faucibus.</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
+							<a href="#" class="icon fa-vcard-o">
+							<a href="#" class="icon fa-vcard-o">
 								<header>
 									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
 									<h3>Ante sem integer</h3>
@@ -68,22 +71,38 @@
 								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
 						</section>
+						<a href="#" class="icon fa-vcard-o">
 						<section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-									<h3>Ipsum consequat</h3>
+									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+									<h3>Ipsum consequat Ipsum consequat Ipsum consequat Ipsum consequat</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Nunc lacinia ante nunc ac lobortis lacinia ante nunc ac ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
 						</section>
+						<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
 						<section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
 									<h3>Interdum gravida</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Nunc lacinia ante nunc ac lobortis ipsum.
+								<a href="#" class="icon fa-vcard-o">
+								Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
 						</section>
 						<section>
@@ -92,16 +111,17 @@
 									<a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
 									<h3>Faucibus consequat</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum odio porttitor mi integer non faucibus sem adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
 						</section>
+						<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
 						<section>
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Accumsan viverra</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Nunc lacinia ante nunc ac odio porttitor sem mi integer non faucibus lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 							</div>
 						</section>
 					</div>
@@ -112,7 +132,7 @@
 			<section id="cta" class="wrapper">
 				<div class="inner">
 					<h2>Curabitur ullamcorper ultricies</h2>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem odio porttitor sem odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
 				</div>
 			</section>
 
@@ -121,13 +141,13 @@
 				<div class="inner">
 					<header class="special">
 						<h2>Faucibus consequat lorem</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<p>In arcu accumsan arcu adipiscing odio porttitor sem odio porttitor sem accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
 					</header>
 					<div class="testimonials">
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida mi integer non faucibus odio porttitor sem non mi integer non faucibus.</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
@@ -143,23 +163,20 @@
 									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 								</blockquote>
 								<div class="author">
-									<div class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</div>
-									<p class="credit">- <strong>John Doe</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>a href="#" class=" Interdum gravida icon fa-vcard-o"<span class="label">Icon</span></a></strong> <span>CEO - ABC Inc.</span></p>
 								</div>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum odio porttitor sem odio porttitor sem adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Janet Smith</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Janet odio porttitor sem Smith</strong> <span>CEodio - ABac Inc.</span></p>
 								</div>
 							</div>
 						</section>
@@ -173,23 +190,31 @@
 					<div class="content">
 						<section>
 							<h3>Accumsan montes viverra</h3>
-							<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+							<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida mi integer non faucibus odio porttitor sem non mi integer mi integer non faucibus non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
 						</section>
 						<section>
 							<h4>Sem turpis amet semper</h4>
 							<ul class="alt">
 								<li><a href="#">Dolor pulvinar sed etiam.</a></li>
 								<li><a href="#">Etiam vel lorem sed amet.</a></li>
-								<li><a href="#">Felis enim feugiat viverra.</a></li>
+								<li><a href="#">Felis enim mi integer non faucibus feugiat viverra.</a></li>
 								<li><a href="#">Dolor pulvinar magna etiam.</a></li>
 							</ul>
+							<div class="image">
+										<img src="images/pic03.jpg" alt="" />
+									</div>
 						</section>
 						<section>
 							<h4>Magna sed ipsum</h4>
 							<ul class="plain">
 								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+								<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+								<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+								<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+								<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
 								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
 								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
+								<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
 								<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
 							</ul>
 						</section>
